# steel-defect-segmentation

./: .gitignore  CLAUDE.md  README.md  plan.md  pyproject.toml
app/: app.py  requirements.txt
notebooks/: steel_defect_yolo26_train.ipynb  train_colab.ipynb
reports/: benchmark.md  dataset_stats.md  eval_results.md  training_results.csv
reports/defect1_weighted/: args.yaml  eval_results.md  training_results.csv
scripts/: convert_severstal_to_yolo.py  evaluate.py  export_benchmark.py  plot_experiment_comparison.py  plot_training_curve.py
