[project]
name = "steel-defect-segmentation"
version = "0.1.0"
description = "Steel surface defect instance segmentation with Ultralytics YOLO26 on the Severstal dataset"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "ultralytics>=8.4.0",
    "opencv-python>=4.10",
    "pandas>=2.0",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "kaggle>=2.2",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "nbformat>=5.10",
]
